--- a/views/my_account.ejs
+++ b/views/my_account.ejs
@@ -16,6 +16,8 @@
 					<h4><b>Username:</b>  <%= currentUser.username %> </h4>
 					<h4><b>Firstname:</b>  <%= currentUser.firstName %> </h4>
 					<h4><b>Lastname:</b>  <%= currentUser.lastName %> </h4>
+					<h4><b>Διεύθυνση:</b>  <%= currentUser.address %> </h4>
+					<h4><b>Ταχυδρομικός Κώδικας:</b>  <%= currentUser.postal_code %> </h4>
 					
 					<h4><b>Email:</b>  <%= currentUser.email %> </h4>
 					<h4><b>Phone:</b>  <%= currentUser.phone %> </h4>
