--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -77,9 +77,9 @@
 						
 						<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
 						  <a class="dropdown-item" href="/anazitisi_diadromis">Δρομολόγια/Στάσεις</a>
-						  <a class="dropdown-item" href="/24wra_leoforeia">24ωρα Λεωφορεία</a>
+						  <a class="dropdown-item" href="/24wra_leoforeia">24ωρα Δρομολόγια</a>
 						  <a class="dropdown-item" href="/nyxterina_dromologia">Νυχτερινά δρομολόγια</a>
-						  <a class="dropdown-item" href="/24wra_leoforeia">Λεωφορεία αεροδρομίου</a>
+						  <a class="dropdown-item" href="/24wra_leoforeia">Δρομολόγια προς αεροδρόμιο</a>
 						</div>
 					</li>
 					
