--- a/views/register.ejs
+++ b/views/register.ejs
@@ -10,51 +10,58 @@
 
 
 			<div class="form-group">
-				<input class="form-control" type="text" name="username" placeholder = "Username" required>
+				<input class="form-control" type="text" name="username" placeholder = "Όνομα Χρήστη" required>
 			</div>
 
 			<div class="form-group">
-				<input class="form-control" type="password" name="password" placeholder = "Password" required>
+				<input class="form-control" type="password" name="password" placeholder = "Κωδικός" required>
 			</div>
 			
 			<div class="form-group">
-				<input class="form-control" type="password" name="password_again" placeholder="Password_again" required>
+				<input class="form-control" type="password" name="password_again" placeholder="Κωδικός Ξανά" required>
 			</div>
 			
 			
 			<div class="form-group">
-				<input class="form-control" type="text" name="firstName" placeholder="Firstname" required>
+				<input class="form-control" type="text" name="firstName" placeholder="Όνομα" required>
 			</div>
 			
 			<div class="form-group">
-				<input class="form-control" type="text" name="lastName" placeholder="Lastname" required>
+				<input class="form-control" type="text" name="lastName" placeholder="Επώνυμο" required>
 			</div>
+			
+			
+			
+			
+			<div class="form-group">
+				<input class="form-control" type="text" name="address" placeholder="Διεύθυνση" required>
+			</div>
+			
+			<div class="form-group">
+				<input class="form-control" type="text" name="postal_code" placeholder="Ταχυδρομικός Κώδικας" required>
+			</div>
+			
+			
+			
+			
 			
 			<div class="form-group">
 				<input class="form-control" type="email" name="email" placeholder="Email">
 			</div>
 			
 			<div class="form-group">
-				<input class="form-control" type="number" name="phone" placeholder="Phone">
+				<input class="form-control" type="number" name="phone" placeholder="Τηλέφωνο">
 			</div>
 			
 			<div class="form-group">
-				<input class="form-control" type="number" name="AFM" placeholder="Afm" requireds>
+				<input class="form-control" type="number" name="AFM" placeholder="Αφμ" requireds>
 			</div>
-			
-			
-			
 			
 			
 			<div class="form-group">
-				<input class="form-control" type="text" name="image" placeholder="image url" requireds>
+				<input class="form-control" type="text" name="image" placeholder="Εικόνα Χρήστη (url)" requireds>
 			</div>
 			
-			
-			
-			
-			
-
 
 			<div class="form-group">
 				<button class="btn btn-sm btn-success btn-default btn-block" >Εγγραφή</button>
