--- a/views/account.ejs
+++ b/views/account.ejs
@@ -10,41 +10,49 @@
 
 
 			<div class="form-group">
-				<input class="form-control" type="text" name="username" placeholder = "Username" value = "<%= currentUser.username %>">
+				<input class="form-control" type="text" name="username" placeholder = "Όνομα Χρήστη" value = "<%= currentUser.username %>">
 			</div>
 			
 			<div class="form-group">
-				<input class="form-control" type="text" name="firstName" placeholder="firstName" value = "<%= currentUser.firstName %>" >
+				<input class="form-control" type="text" name="firstName" placeholder="Όνομα" value = "<%= currentUser.firstName %>" >
 			</div>
 
 			
 			<div class="form-group">
-				<input class="form-control" type="text" name="lastName" placeholder="LastName" value = "<%= currentUser.lastName %>">
+				<input class="form-control" type="text" name="lastName" placeholder="Επώνυμο" value = "<%= currentUser.lastName %>">
 			</div>
 			
 			<div class="form-group">
 				<input class="form-control" type="email" name="email" placeholder="Email" value = "<%= currentUser.email %>">
 			</div>
 			
-			<div class="form-group">
-				<input class="form-control" type="number" name="phone" placeholder="Phone" value = "<%= currentUser.phone %>">
-			</div>
-			
-			<div class="form-group">
-				<input class="form-control" type="number" name="AFM" placeholder="Afm" value = "<%= currentUser.AFM %>">
-			</div>
-			
-			
 			
 			
 			
 			<div class="form-group">
-				<input class="form-control" type="text" name="image" placeholder="image url" value = "<%= currentUser.image %>">
+				<input class="form-control" type="text" name="address" placeholder="Διεύθυνση" value = "<%= currentUser.address %>">
 			</div>
 			
-
-
-
+			<div class="form-group">
+				<input class="form-control" type="text" name="postal_code" placeholder="Ταχυδρομικός Κώδικας" value = "<%= currentUser.postal_code %>">
+			</div>
+			
+			
+			
+			
+			
+			<div class="form-group">
+				<input class="form-control" type="number" name="phone" placeholder="Τηλέφωνο" value = "<%= currentUser.phone %>">
+			</div>
+			
+			<div class="form-group">
+				<input class="form-control" type="number" name="AFM" placeholder="Αφμ" value = "<%= currentUser.AFM %>">
+			</div>
+			
+			
+			<div class="form-group">
+				<input class="form-control" type="text" name="image" placeholder="Εικόνα Χρήστη (url)" value = "<%= currentUser.image %>">
+			</div>
 
 
 			<div class="form-group">
