--- a/views/agora_eisitirion.ejs
+++ b/views/agora_eisitirion.ejs
@@ -21,10 +21,10 @@
 							
 							<div class="form-group">
 							  <select class="form-control" name="stoixeia[komistro]">
-								<option>Ενιαίο εισιτήριο 90 λεπτών</option>
-								<option>Μειωμένο εισιτήριο 90 λεπτών</option>
-								<option>Ημερήσιο εισιτήριο</option>
-								<option>Εισιτήριο πέντε ημερών</option>
+								<option>Ενιαίο εισιτήριο 90 λεπτών (1.40)</option>
+								<option>Μειωμένο εισιτήριο 90 λεπτών (0.60)</option>
+								<option>Ημερήσιο εισιτήριο (4.50)</option>
+								<option>Εισιτήριο πέντε ημερών (9.00)</option>
 							  </select>
 							</div>
 							  
@@ -66,12 +66,12 @@
 						
 								<div class="form-group">
 								  <select class="form-control" name="stoixeia[paralavi]">
-									<option value="karta" >Αποστολή στην παραπάνω διεύθυνση (+5.00 ευρώ)</option>
-									<option value="paypal">Παραλαβή απο σταθμό Σύνταγμα</option>
-									<option value="paypal">Παραλαβή απο σταθμό Αττική</option>
-									<option value="paypal">Παραλαβή απο σταθμό Ομόνοια</option>
-									<option value="paypal">Παραλαβή απο σταθμό Μοναστηράκι</option>
-									<option value="paypal">Παραλαβή απο σταθμό Αιγάλεο</option>
+									<option>Αποστολή στην παραπάνω διεύθυνση (+5.00 ευρώ)</option>
+									<option>Παραλαβή απο σταθμό Σύνταγμα</option>
+									<option>Παραλαβή απο σταθμό Αττική</option>
+									<option>Παραλαβή απο σταθμό Ομόνοια</option>
+									<option>Παραλαβή απο σταθμό Μοναστηράκι</option>
+									<option>Παραλαβή απο σταθμό Αιγάλεο</option>
 								  </select>
 								</div>
 							
@@ -153,10 +153,10 @@
 
 								<div class="form-group">
 								  <select class="form-control" name="stoixeia[komistro]">
-									<option>Ενιαίο εισιτήριο 90 λεπτών</option>
-									<option>Μειωμένο εισιτήριο 90 λεπτών</option>
-									<option>Ημερήσιο εισιτήριο</option>
-									<option>Εισιτήριο πέντε ημερών</option>
+									<option>Ενιαίο εισιτήριο 90 λεπτών (1.40)</option>
+									<option>Μειωμένο εισιτήριο 90 λεπτών (0.60)</option>
+									<option>Ημερήσιο εισιτήριο (4.50)</option>
+									<option>Εισιτήριο πέντε ημερών (9.00)</option>
 								  </select>
 								</div>
 							  
@@ -195,12 +195,12 @@
 						
 								<div class="form-group">
 								  <select class="form-control" name="stoixeia[paralavi]">
-									<option value="karta" >Αποστολή στην παραπάνω διεύθυνση (+5.00 ευρώ)</option>
-									<option value="paypal">Παραλαβή απο σταθμό Σύνταγμα</option>
-									<option value="paypal">Παραλαβή απο σταθμό Αττική</option>
-									<option value="paypal">Παραλαβή απο σταθμό Ομόνοια</option>
-									<option value="paypal">Παραλαβή απο σταθμό Μοναστηράκι</option>
-									<option value="paypal">Παραλαβή απο σταθμό Αιγάλεο</option>
+									<option>Αποστολή στην παραπάνω διεύθυνση (+5.00 ευρώ)</option>
+									<option>Παραλαβή απο σταθμό Σύνταγμα</option>
+									<option>Παραλαβή απο σταθμό Αττική</option>
+									<option>Παραλαβή απο σταθμό Ομόνοια</option>
+									<option>Παραλαβή απο σταθμό Μοναστηράκι</option>
+									<option>Παραλαβή απο σταθμό Αιγάλεο</option>
 								  </select>
 								</div>
 							
