added euro symbol next to prices

--- a/views/agora_eisitirion.ejs
+++ b/views/agora_eisitirion.ejs
@@ -21,10 +21,10 @@
 							
 							<div class="form-group">
 							  <select class="form-control" name="stoixeia[komistro]">
-								<option>Ενιαίο εισιτήριο 90 λεπτών (1.40)</option>
-								<option>Μειωμένο εισιτήριο 90 λεπτών (0.60)</option>
-								<option>Ημερήσιο εισιτήριο (4.50)</option>
-								<option>Εισιτήριο πέντε ημερών (9.00)</option>
+								<option>Ενιαίο εισιτήριο 90 λεπτών (1.40€)</option>
+								<option>Μειωμένο εισιτήριο 90 λεπτών (0.60€)</option>
+								<option>Ημερήσιο εισιτήριο (4.50€)</option>
+								<option>Εισιτήριο πέντε ημερών (9.00€)</option>
 							  </select>
 							</div>
 							  
@@ -153,10 +153,10 @@
 
 								<div class="form-group">
 								  <select class="form-control" name="stoixeia[komistro]">
-									<option>Ενιαίο εισιτήριο 90 λεπτών (1.40)</option>
-									<option>Μειωμένο εισιτήριο 90 λεπτών (0.60)</option>
-									<option>Ημερήσιο εισιτήριο (4.50)</option>
-									<option>Εισιτήριο πέντε ημερών (9.00)</option>
+									<option>Ενιαίο εισιτήριο 90 λεπτών (1.40€)</option>
+									<option>Μειωμένο εισιτήριο 90 λεπτών (0.60€)</option>
+									<option>Ημερήσιο εισιτήριο (4.50€)</option>
+									<option>Εισιτήριο πέντε ημερών (9.00€)</option>
 								  </select>
 								</div>
 							  
