--- a/views/epanafortisi_kartas.ejs
+++ b/views/epanafortisi_kartas.ejs
@@ -22,10 +22,10 @@
 
 								<div class="form-group">
 								  <select class="form-control" name="stoixeia[komistro]">
-									<option>Ενιαίο εισιτήριο 90 λεπτών</option>
-									<option>Μειωμένο εισιτήριο 90 λεπτών</option>
-									<option>Ημερήσιο εισιτήριο</option>
-									<option>Εισιτήριο πέντε ημερών</option>
+									<option>Ενιαίο εισιτήριο 90 λεπτών (1.40€)</option>
+									<option>Μειωμένο εισιτήριο 90 λεπτών (0.60€)</option>
+									<option>Ημερήσιο εισιτήριο (4.50€)</option>
+									<option>Εισιτήριο πέντε ημερών (9.00€)</option>
 								  </select>
 								</div>
 							  
@@ -138,10 +138,10 @@
 
 								<div class="form-group">
 								  <select class="form-control" name="stoixeia[komistro]">
-									<option>Ενιαίο εισιτήριο 90 λεπτών</option>
-									<option>Μειωμένο εισιτήριο 90 λεπτών</option>
-									<option>Ημερήσιο εισιτήριο</option>
-									<option>Εισιτήριο πέντε ημερών</option>
+									<option>Ενιαίο εισιτήριο 90 λεπτών (1.40€)</option>
+									<option>Μειωμένο εισιτήριο 90 λεπτών (0.60€)</option>
+									<option>Ημερήσιο εισιτήριο (4.50€)</option>
+									<option>Εισιτήριο πέντε ημερών (9.00€)</option>
 								  </select>
 								</div>
 							  
