--- a/views/apotelesmata_anaz_diadromis.ejs
+++ b/views/apotelesmata_anaz_diadromis.ejs
@@ -36,7 +36,10 @@
 						
 						<td><%= drom.terma %></td>
 						<td><%= drom.epomeno %></td>
-						<td><a href="/plirofories_stasis/<%= drom._id %>">Χάρτης</a></td>
+						
+						<td><a target="_blank" rel="noopener noreferrer" href="/plirofories_stasis/<%= drom._id %>">Χάρτης</a></td>
+						
+						
 					</tr>
 				 <% })  %>
 			</tbody>
