--- a/views/agora_eisitirion.ejs
+++ b/views/agora_eisitirion.ejs
@@ -200,7 +200,7 @@
 									<option>Παραλαβή απο σταθμό Αττική</option>
 									<option>Παραλαβή απο σταθμό Ομόνοια</option>
 									<option>Παραλαβή απο σταθμό Μοναστηράκι</option>
-									<option>Παραλαβή απο σταθμό Αιγάλεο</option>
+									<option>Παραλαβή απο σταθμό Αιγάλεω</option>
 								  </select>
 								</div>
 							
