--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -92,7 +92,7 @@
 						<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
 						  <a class="dropdown-item" href="/epanafortisi_kartas">Επαναφόρτιση κάρτας</a>
 						  <a class="dropdown-item" href="/agora_eisitirion">Αγορά εισιτηρίων</a>
-						  <a class="dropdown-item" href="#">Τιμές εισιτηρίων</a>
+						  <a class="dropdown-item" href="/times_eisitirion">Τιμές εισιτηρίων</a>
 						  <a class="dropdown-item" href="#">Δικαιολογητικά έκδοσης κάρτας</a>
 						  <a class="dropdown-item" href="#">Σταθμοί έκδοσης καρτών</a>
 						</div>
